# udemy_authorization_service

./: .gitignore  README.md  manage.py  pyproject.toml  send_mail.py
apps/authorization/: manager.py  models.py  serializers.py  urls.py  views.py
apps/authorization/services/: manager_services.py  validating.py
apps/mentor_information/: apps.py  models.py  serializers.py  views.py
commons/: constants.py
permissions/: mentor.py
settings/: settings.py  wsgi.py
